--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import './base/base';
 @import './variables/variables';
 @import '../components/Navbar/navbar';
-@import '../pages/Home/home'
+@import '../pages/Home/home';
+@import '../components/Calculator/calculator';
