--- a/frontend/src/styles/variables/_variables.scss
+++ b/frontend/src/styles/variables/_variables.scss
@@ -2,7 +2,7 @@
 
 :root {
     --black-color: #121212;
-    --red-color: #ee001c;
+    --red-color: #e90202;
     --family-font: 'Montserrat', sans-serif;
     --title-font: 'Alumni Sans Collegiate One', sans-serif;
 }
