--- a/frontend/src/pages/Home/_home.scss
+++ b/frontend/src/pages/Home/_home.scss
@@ -28,9 +28,12 @@
 
         .calculator {
             width: 50%;
+            display: grid;
+            place-items: center;
 
             @media only screen and (max-width: 920px) {
                 width: 100%;
+                margin-bottom: 36px;
             }
         }
 
