--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -3,3 +3,4 @@
 @import '../components/Navbar/navbar';
 @import '../pages/Home/home';
 @import '../components/Calculator/calculator';
+@import '../pages/Contact/contact';
