--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -4,3 +4,6 @@
 @import '../pages/Home/home';
 @import '../components/Calculator/calculator';
 @import '../pages/Contact/contact';
+@import '../pages/Blog/blog';
+@import '../components/Blog/card';
+@import '../components/Details/details'
